server.log
/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/services-v2/emailService.ts(205,22): error TS2339: Property 'emailConfig' does not exist on type '{ env: string; isDevelopment: boolean; isProduction: boolean; port: number; apiPrefix: string; database: { primary: { ssl?: { ca: any; } | undefined; host: string; port: number; user: string; password: string; ... 4 more ...; timezone: string; }; nucleo: { ...; }; nucleoOnline: { ...; }; }; ... 10 more ...; monitori...'.
src/services-v2/emailService.ts(261,22): error TS2339: Property 'emailConfig' does not exist on type '{ env: string; isDevelopment: boolean; isProduction: boolean; port: number; apiPrefix: string; database: { primary: { ssl?: { ca: any; } | undefined; host: string; port: number; user: string; password: string; ... 4 more ...; timezone: string; }; nucleo: { ...; }; nucleoOnline: { ...; }; }; ... 10 more ...; monitori...'.

    at createTSError (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Object.require.extensions.<computed> [as .ts] (/mnt/c/Code/bsi-2025/bsi-server/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19) {
  diagnosticCodes: [ 2339, 2339 ]
}
